--- a/_sass/_components/layout.scss
+++ b/_sass/_components/layout.scss
@@ -38,6 +38,10 @@
   }
 }
 
+.background-gray {
+  background-color: $color-gray-lightest;
+}
+
 .background-dark {
   background-color: $color-dark;
   color: $color-white;
